Issue #995: fix overflow body on filter mobile

--- a/js-packages/search-frontend/src/app.css
+++ b/js-packages/search-frontend/src/app.css
@@ -47,3 +47,7 @@
   color: black;
   opacity: 1; /* Firefox */
 }
+
+.no-scroll {
+  overflow: hidden;
+}
